docker-deployment-v2/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-mvc-v2
  labels:
    app: sample-mvc
    version: v2
spec:
  selector:
    matchLabels:
      app: sample-mvc
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-mvc
        version: v2
    spec:
      containers:
        - name: sample-mvc
          #imagePullPolicy: Never
          image: mesalman/app:v2
          resources:
            limits:
              memory: "50Mi"
              cpu: "50m"
            requests:
              memory: "20Mi"
              cpu: "20m"
          ports:
          - containerPort: 80
