docker-deployment-v2/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-mvc-v2
  labels:
    app: sample-mvc
    version: v2
spec:
  ports:
    - port: 80
  selector:
    app: sample-mvc
    version: v2
  type: ClusterIP
